--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Our Menu</title>
+</head>
+<body>
+  <h1>Our Menu</h1>
 
+  <div class="row">
+    <div class="col-lg-4 col-md-6 col-sm-12 container">
+      <div class=box>
+        <h2 id=chicken>Chicken</h2>
+        <p class=content>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Defendere iudiciorumque utrum ratione diceret impedit nulla rutilius, timorem, patiatur reprimique mundus invidus. Habuit, accedis saxum viderer politus, sinit brutus debeo, dicat fortunae tollatur inciderit re nominis via saperet civitas. Contrariis paranda voluptatibus opinionum studiose molestias damna.</p>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-6 col-sm-12 container">
+      <div class=box><h2 id=beef>Beef</h2>
+        <p class=content>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Defendere iudiciorumque utrum ratione diceret impedit nulla rutilius, timorem, patiatur reprimique mundus invidus. Habuit, accedis saxum viderer politus, sinit brutus debeo, dicat fortunae tollatur inciderit re nominis via saperet civitas. Contrariis paranda voluptatibus opinionum studiose molestias damna.</p>
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-6 col-sm-12 container">
+
+      <div class=box>
+        <h2 id=sushi>Sushi</h2>
+        <p class=content>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Defendere iudiciorumque utrum ratione diceret impedit nulla rutilius, timorem, patiatur reprimique mundus invidus. Habuit, accedis saxum viderer politus, sinit brutus debeo, dicat fortunae tollatur inciderit re nominis via saperet civitas. Contrariis paranda voluptatibus opinionum studiose molestias damna.</p>
+      </div>
+    </div>
+  </div>
+
+</body>
+</html>
